--- a/_pgbackup/tailwind_theme/tailwind_1704927013.css
+++ b/_pgbackup/tailwind_theme/tailwind_1704927013.css
@@ -797,6 +797,43 @@ select{
     max-width: 1536px;
   }
 }
+.absolute{
+  position: absolute;
+}
+.inset-0{
+  inset: 0px;
+}
+.inset-y-0{
+  top: 0px;
+  bottom: 0px;
+}
+.bottom-0{
+  bottom: 0px;
+}
+.bottom-10{
+  bottom: 2.5rem;
+}
+.bottom-5{
+  bottom: 1.25rem;
+}
+.bottom-8{
+  bottom: 2rem;
+}
+.right-0{
+  right: 0px;
+}
+.right-10{
+  right: 2.5rem;
+}
+.right-16{
+  right: 4rem;
+}
+.right-5{
+  right: 1.25rem;
+}
+.right-8{
+  right: 2rem;
+}
 .m-10{
   margin: 2.5rem;
 }
@@ -823,221 +860,17 @@ select{
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
 }
-.-mt-0{
-  margin-top: -0px;
-}
-.-mt-0\.5{
-  margin-top: -0.125rem;
-}
-.-mt-1{
-  margin-top: -0.25rem;
-}
-.-mt-1\.5{
-  margin-top: -0.375rem;
-}
-.-mt-10{
-  margin-top: -2.5rem;
-}
-.-mt-11{
-  margin-top: -2.75rem;
-}
-.-mt-12{
-  margin-top: -3rem;
-}
-.-mt-14{
-  margin-top: -3.5rem;
-}
-.-mt-16{
-  margin-top: -4rem;
-}
-.-mt-2{
-  margin-top: -0.5rem;
-}
-.-mt-2\.5{
-  margin-top: -0.625rem;
-}
-.-mt-20{
-  margin-top: -5rem;
-}
-.-mt-24{
-  margin-top: -6rem;
-}
-.-mt-28{
-  margin-top: -7rem;
-}
-.-mt-3{
-  margin-top: -0.75rem;
-}
-.-mt-3\.5{
-  margin-top: -0.875rem;
-}
-.-mt-32{
-  margin-top: -8rem;
-}
-.-mt-36{
-  margin-top: -9rem;
-}
-.-mt-4{
-  margin-top: -1rem;
-}
-.-mt-40{
-  margin-top: -10rem;
-}
-.-mt-44{
-  margin-top: -11rem;
-}
-.-mt-48{
-  margin-top: -12rem;
-}
-.-mt-5{
-  margin-top: -1.25rem;
-}
-.-mt-52{
-  margin-top: -13rem;
-}
-.-mt-56{
-  margin-top: -14rem;
-}
-.-mt-6{
-  margin-top: -1.5rem;
-}
-.-mt-60{
-  margin-top: -15rem;
-}
-.-mt-64{
-  margin-top: -16rem;
-}
-.-mt-7{
-  margin-top: -1.75rem;
-}
-.-mt-72{
-  margin-top: -18rem;
-}
-.-mt-8{
-  margin-top: -2rem;
-}
-.-mt-80{
-  margin-top: -20rem;
-}
-.-mt-9{
-  margin-top: -2.25rem;
-}
-.-mt-96{
-  margin-top: -24rem;
-}
-.-mt-px{
-  margin-top: -1px;
-}
 .mb-3{
   margin-bottom: 0.75rem;
-}
-.mt-0{
-  margin-top: 0px;
-}
-.mt-0\.5{
-  margin-top: 0.125rem;
-}
-.mt-1{
-  margin-top: 0.25rem;
-}
-.mt-1\.5{
-  margin-top: 0.375rem;
 }
 .mt-10{
   margin-top: 2.5rem;
 }
-.mt-11{
-  margin-top: 2.75rem;
-}
-.mt-12{
-  margin-top: 3rem;
-}
-.mt-14{
-  margin-top: 3.5rem;
-}
-.mt-16{
-  margin-top: 4rem;
-}
-.mt-2{
-  margin-top: 0.5rem;
-}
-.mt-2\.5{
-  margin-top: 0.625rem;
-}
-.mt-20{
-  margin-top: 5rem;
-}
-.mt-24{
-  margin-top: 6rem;
-}
-.mt-28{
-  margin-top: 7rem;
-}
 .mt-3{
   margin-top: 0.75rem;
 }
-.mt-3\.5{
-  margin-top: 0.875rem;
-}
-.mt-32{
-  margin-top: 8rem;
-}
-.mt-36{
-  margin-top: 9rem;
-}
 .mt-4{
   margin-top: 1rem;
-}
-.mt-40{
-  margin-top: 10rem;
-}
-.mt-44{
-  margin-top: 11rem;
-}
-.mt-48{
-  margin-top: 12rem;
-}
-.mt-5{
-  margin-top: 1.25rem;
-}
-.mt-52{
-  margin-top: 13rem;
-}
-.mt-56{
-  margin-top: 14rem;
-}
-.mt-6{
-  margin-top: 1.5rem;
-}
-.mt-60{
-  margin-top: 15rem;
-}
-.mt-64{
-  margin-top: 16rem;
-}
-.mt-7{
-  margin-top: 1.75rem;
-}
-.mt-72{
-  margin-top: 18rem;
-}
-.mt-8{
-  margin-top: 2rem;
-}
-.mt-80{
-  margin-top: 20rem;
-}
-.mt-9{
-  margin-top: 2.25rem;
-}
-.mt-96{
-  margin-top: 24rem;
-}
-.mt-auto{
-  margin-top: auto;
-}
-.mt-px{
-  margin-top: 1px;
 }
 .block{
   display: block;
@@ -1048,8 +881,20 @@ select{
 .hidden{
   display: none;
 }
+.h-10{
+  height: 2.5rem;
+}
+.h-5{
+  height: 1.25rem;
+}
 .h-6{
   height: 1.5rem;
+}
+.h-7{
+  height: 1.75rem;
+}
+.h-8{
+  height: 2rem;
 }
 .h-full{
   height: 100%;
@@ -1057,8 +902,32 @@ select{
 .h-screen{
   height: 100vh;
 }
+.max-h-\[1000px\]{
+  max-height: 1000px;
+}
+.max-h-\[220px\]{
+  max-height: 220px;
+}
+.max-h-\[800px\]{
+  max-height: 800px;
+}
+.max-h-\[80px\]{
+  max-height: 80px;
+}
+.max-h-\[8800px\]{
+  max-height: 8800px;
+}
+.max-h-\[900px\]{
+  max-height: 900px;
+}
+.max-h-\[\]{
+  max-height: ;
+}
 .max-h-full{
   max-height: 100%;
+}
+.max-h-px{
+  max-height: 1px;
 }
 .max-h-screen{
   max-height: 100vh;
@@ -1066,17 +935,32 @@ select{
 .min-h-full{
   min-height: 100%;
 }
+.min-h-screen{
+  min-height: 100vh;
+}
+.w-10{
+  width: 2.5rem;
+}
 .w-11\/12{
   width: 91.666667%;
 }
 .w-36{
   width: 9rem;
 }
+.w-5{
+  width: 1.25rem;
+}
 .w-6{
   width: 1.5rem;
 }
 .w-64{
   width: 16rem;
+}
+.w-7{
+  width: 1.75rem;
+}
+.w-8{
+  width: 2rem;
 }
 .w-80{
   width: 20rem;
@@ -1138,8 +1022,14 @@ select{
 .overflow-hidden{
   overflow: hidden;
 }
+.overflow-visible{
+  overflow: visible;
+}
 .overflow-x-scroll{
   overflow-x: scroll;
+}
+.overflow-y-scroll{
+  overflow-y: scroll;
 }
 .rounded{
   border-radius: 0.25rem;
@@ -1150,17 +1040,36 @@ select{
 .rounded-3xl{
   border-radius: 1.5rem;
 }
+.rounded-full{
+  border-radius: 9999px;
+}
 .rounded-lg{
   border-radius: 0.5rem;
 }
 .rounded-tl-2xl{
   border-top-left-radius: 1rem;
 }
+.rounded-tr-2xl{
+  border-top-right-radius: 1rem;
+}
+.rounded-tr-full{
+  border-top-right-radius: 9999px;
+}
 .border-b-2{
   border-bottom-width: 2px;
 }
+.border-solid{
+  border-style: solid;
+}
+.border-none{
+  border-style: none;
+}
 .border-current{
   border-color: currentColor;
+}
+.border-gray-900{
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }
 .bg-current{
   background-color: currentColor;
@@ -1168,6 +1077,14 @@ select{
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-yellow-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 211 77 / var(--tw-bg-opacity));
+}
+.bg-yellow-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 191 36 / var(--tw-bg-opacity));
 }
 .object-contain{
   -o-object-fit: contain;
@@ -1185,11 +1102,24 @@ select{
   -o-object-position: center;
      object-position: center;
 }
+.object-left-top{
+  -o-object-position: left top;
+     object-position: left top;
+}
+.p-10{
+  padding: 2.5rem;
+}
 .p-3{
   padding: 0.75rem;
 }
 .p-5{
   padding: 1.25rem;
+}
+.p-7{
+  padding: 1.75rem;
+}
+.p-9{
+  padding: 2.25rem;
 }
 .px-0{
   padding-left: 0px;
@@ -1211,11 +1141,32 @@ select{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.pb-16{
+  padding-bottom: 4rem;
+}
 .pl-3{
   padding-left: 0.75rem;
 }
+.pl-5{
+  padding-left: 1.25rem;
+}
+.pr-10{
+  padding-right: 2.5rem;
+}
+.pr-12{
+  padding-right: 3rem;
+}
 .pt-0{
   padding-top: 0px;
+}
+.pt-3{
+  padding-top: 0.75rem;
+}
+.pt-5{
+  padding-top: 1.25rem;
+}
+.pt-7{
+  padding-top: 1.75rem;
 }
 .text-left{
   text-align: left;
@@ -1298,6 +1249,78 @@ body, html {
 
   .sm\:bg-gradient-to-tl{
     background-image: linear-gradient(to top left, var(--tw-gradient-stops));
+  }
+}
+@media (min-width: 768px){
+
+
+  .md\:fixed{
+    position: fixed;
+  }
+
+
+  .md\:absolute{
+    position: absolute;
+  }
+
+
+  .md\:bottom-0{
+    bottom: 0px;
+  }
+
+
+  .md\:flex{
+    display: flex;
+  }
+
+
+  .md\:h-10{
+    height: 2.5rem;
+  }
+
+
+  .md\:w-10{
+    width: 2.5rem;
+  }
+
+
+  .md\:max-w-2xl{
+    max-width: 42rem;
+  }
+
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+
+  .md\:flex-col{
+    flex-direction: column;
+  }
+
+
+  .md\:items-center{
+    align-items: center;
+  }
+
+
+  .md\:items-stretch{
+    align-items: stretch;
+  }
+
+
+  .md\:justify-center{
+    justify-content: center;
+  }
+
+
+  .md\:overflow-x-visible{
+    overflow-x: visible;
+  }
+
+
+  .md\:overflow-x-scroll{
+    overflow-x: scroll;
   }
 }
 @media (min-width: 1024px){
