--- a/_pgbackup/tailwind_theme/tailwind_1704929793.css
+++ b/_pgbackup/tailwind_theme/tailwind_1704929793.css
@@ -759,364 +759,38 @@ select{
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.container{
-  width: 100%;
-}
-@media (min-width: 640px){
-
-
-  .container{
-    max-width: 640px;
-  }
-}
-@media (min-width: 768px){
-
-
-  .container{
-    max-width: 768px;
-  }
-}
-@media (min-width: 1024px){
-
-
-  .container{
-    max-width: 1024px;
-  }
-}
-@media (min-width: 1280px){
-
-
-  .container{
-    max-width: 1280px;
-  }
-}
-@media (min-width: 1536px){
-
-
-  .container{
-    max-width: 1536px;
-  }
-}
-.m-10{
-  margin: 2.5rem;
-}
 .m-2{
   margin: 0.5rem;
 }
 .m-3{
   margin: 0.75rem;
 }
-.m-5{
-  margin: 1.25rem;
-}
-.m-7{
-  margin: 1.75rem;
-}
-.m-8{
-  margin: 2rem;
-}
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-.my-1{
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-.-mt-0{
-  margin-top: -0px;
-}
-.-mt-0\.5{
-  margin-top: -0.125rem;
-}
-.-mt-1{
-  margin-top: -0.25rem;
-}
-.-mt-1\.5{
-  margin-top: -0.375rem;
-}
-.-mt-10{
-  margin-top: -2.5rem;
-}
-.-mt-11{
-  margin-top: -2.75rem;
-}
-.-mt-12{
-  margin-top: -3rem;
-}
-.-mt-14{
-  margin-top: -3.5rem;
-}
-.-mt-16{
-  margin-top: -4rem;
-}
-.-mt-2{
-  margin-top: -0.5rem;
-}
-.-mt-2\.5{
-  margin-top: -0.625rem;
-}
-.-mt-20{
-  margin-top: -5rem;
-}
-.-mt-24{
-  margin-top: -6rem;
-}
-.-mt-28{
-  margin-top: -7rem;
-}
-.-mt-3{
-  margin-top: -0.75rem;
-}
-.-mt-3\.5{
-  margin-top: -0.875rem;
-}
-.-mt-32{
-  margin-top: -8rem;
-}
-.-mt-36{
-  margin-top: -9rem;
-}
-.-mt-4{
-  margin-top: -1rem;
-}
-.-mt-40{
-  margin-top: -10rem;
-}
-.-mt-44{
-  margin-top: -11rem;
-}
-.-mt-48{
-  margin-top: -12rem;
-}
-.-mt-5{
-  margin-top: -1.25rem;
-}
-.-mt-52{
-  margin-top: -13rem;
-}
-.-mt-56{
-  margin-top: -14rem;
-}
-.-mt-6{
-  margin-top: -1.5rem;
-}
-.-mt-60{
-  margin-top: -15rem;
-}
-.-mt-64{
-  margin-top: -16rem;
-}
-.-mt-7{
-  margin-top: -1.75rem;
-}
-.-mt-72{
-  margin-top: -18rem;
-}
-.-mt-8{
-  margin-top: -2rem;
-}
-.-mt-80{
-  margin-top: -20rem;
-}
-.-mt-9{
-  margin-top: -2.25rem;
-}
-.-mt-96{
-  margin-top: -24rem;
-}
-.-mt-px{
-  margin-top: -1px;
-}
 .mb-3{
   margin-bottom: 0.75rem;
-}
-.mt-0{
-  margin-top: 0px;
-}
-.mt-0\.5{
-  margin-top: 0.125rem;
-}
-.mt-1{
-  margin-top: 0.25rem;
-}
-.mt-1\.5{
-  margin-top: 0.375rem;
-}
-.mt-10{
-  margin-top: 2.5rem;
-}
-.mt-11{
-  margin-top: 2.75rem;
-}
-.mt-12{
-  margin-top: 3rem;
-}
-.mt-14{
-  margin-top: 3.5rem;
-}
-.mt-16{
-  margin-top: 4rem;
-}
-.mt-2{
-  margin-top: 0.5rem;
-}
-.mt-2\.5{
-  margin-top: 0.625rem;
-}
-.mt-20{
-  margin-top: 5rem;
-}
-.mt-24{
-  margin-top: 6rem;
-}
-.mt-28{
-  margin-top: 7rem;
 }
 .mt-3{
   margin-top: 0.75rem;
 }
-.mt-3\.5{
-  margin-top: 0.875rem;
-}
-.mt-32{
-  margin-top: 8rem;
-}
-.mt-36{
-  margin-top: 9rem;
-}
 .mt-4{
   margin-top: 1rem;
-}
-.mt-40{
-  margin-top: 10rem;
-}
-.mt-44{
-  margin-top: 11rem;
-}
-.mt-48{
-  margin-top: 12rem;
-}
-.mt-5{
-  margin-top: 1.25rem;
-}
-.mt-52{
-  margin-top: 13rem;
-}
-.mt-56{
-  margin-top: 14rem;
-}
-.mt-6{
-  margin-top: 1.5rem;
-}
-.mt-60{
-  margin-top: 15rem;
-}
-.mt-64{
-  margin-top: 16rem;
-}
-.mt-7{
-  margin-top: 1.75rem;
-}
-.mt-72{
-  margin-top: 18rem;
-}
-.mt-8{
-  margin-top: 2rem;
-}
-.mt-80{
-  margin-top: 20rem;
-}
-.mt-9{
-  margin-top: 2.25rem;
-}
-.mt-96{
-  margin-top: 24rem;
-}
-.mt-auto{
-  margin-top: auto;
-}
-.mt-px{
-  margin-top: 1px;
-}
-.block{
-  display: block;
 }
 .flex{
   display: flex;
 }
-.hidden{
-  display: none;
-}
-.h-6{
-  height: 1.5rem;
-}
-.h-full{
-  height: 100%;
-}
-.h-screen{
-  height: 100vh;
-}
-.max-h-\[1000px\]{
-  max-height: 1000px;
-}
-.max-h-\[220px\]{
-  max-height: 220px;
-}
-.max-h-\[800px\]{
-  max-height: 800px;
-}
-.max-h-\[80px\]{
-  max-height: 80px;
-}
-.max-h-\[8800px\]{
-  max-height: 8800px;
-}
 .max-h-\[900px\]{
   max-height: 900px;
-}
-.max-h-\[\]{
-  max-height: ;
-}
-.max-h-full{
-  max-height: 100%;
-}
-.max-h-px{
-  max-height: 1px;
-}
-.max-h-screen{
-  max-height: 100vh;
 }
 .min-h-full{
   min-height: 100%;
 }
-.w-11\/12{
-  width: 91.666667%;
-}
-.w-36{
-  width: 9rem;
-}
-.w-6{
-  width: 1.5rem;
+.min-h-screen{
+  min-height: 100vh;
 }
 .w-64{
   width: 16rem;
 }
-.w-80{
-  width: 20rem;
-}
-.w-96{
-  width: 24rem;
-}
 .w-full{
   width: 100%;
-}
-.w-max{
-  width: -moz-max-content;
-  width: max-content;
-}
-.w-px{
-  width: 1px;
 }
 .min-w-full{
   min-width: 100%;
@@ -1124,17 +798,11 @@ select{
 .max-w-full{
   max-width: 100%;
 }
-.flex-1{
-  flex: 1 1 0%;
-}
-.flex-auto{
-  flex: 1 1 auto;
-}
-.flex-initial{
-  flex: 0 1 auto;
-}
 .flex-grow{
   flex-grow: 1;
+}
+.cursor-pointer{
+  cursor: pointer;
 }
 .flex-row{
   flex-direction: row;
@@ -1142,22 +810,11 @@ select{
 .flex-col{
   flex-direction: column;
 }
-.flex-wrap{
-  flex-wrap: wrap;
-}
 .items-center{
   align-items: center;
 }
 .justify-center{
   justify-content: center;
-}
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-.overflow-auto{
-  overflow: auto;
 }
 .overflow-hidden{
   overflow: hidden;
@@ -1165,88 +822,35 @@ select{
 .overflow-x-scroll{
   overflow-x: scroll;
 }
-.rounded{
-  border-radius: 0.25rem;
-}
 .rounded-2xl{
   border-radius: 1rem;
 }
 .rounded-3xl{
   border-radius: 1.5rem;
 }
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-.rounded-tl-2xl{
-  border-top-left-radius: 1rem;
-}
-.rounded-tr-2xl{
-  border-top-right-radius: 1rem;
-}
-.border-b-2{
-  border-bottom-width: 2px;
-}
-.border-current{
-  border-color: currentColor;
-}
-.bg-current{
-  background-color: currentColor;
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.object-contain{
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
 }
-.object-scale-down{
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
-}
 .object-center{
   -o-object-position: center;
      object-position: center;
 }
-.object-left-top{
-  -o-object-position: left top;
-     object-position: left top;
-}
-.p-3{
-  padding: 0.75rem;
-}
-.p-5{
-  padding: 1.25rem;
-}
 .p-7{
   padding: 1.75rem;
 }
-.px-0{
-  padding-left: 0px;
-  padding-right: 0px;
+.pb-16{
+  padding-bottom: 4rem;
 }
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.pl-5{
+  padding-left: 1.25rem;
 }
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-.pl-3{
-  padding-left: 0.75rem;
+.pr-10{
+  padding-right: 2.5rem;
 }
 .pt-0{
   padding-top: 0px;
@@ -1254,14 +858,11 @@ select{
 .pt-3{
   padding-top: 0.75rem;
 }
-.pt-7{
-  padding-top: 1.75rem;
+.pt-5{
+  padding-top: 1.25rem;
 }
 .text-left{
   text-align: left;
-}
-.text-center{
-  text-align: center;
 }
 .font-sans{
   font-family: 'Mulish', sans-serif;
@@ -1277,37 +878,24 @@ select{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.font-bold{
-  font-weight: 700;
-}
-.font-light{
-  font-weight: 300;
-}
-.font-medium{
-  font-weight: 500;
-}
 .font-semibold{
   font-weight: 600;
-}
-.uppercase{
-  text-transform: uppercase;
 }
 .italic{
   font-style: italic;
 }
-.text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+.transition{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
-.shadow-2xl{
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.duration-300{
+  transition-duration: 300ms;
 }
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body{
@@ -1317,28 +905,8 @@ body{
 body, html {
     min-height: 100vh;
 }
-.hover\:bg-blue-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-.hover\:text-blue-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-.hover\:text-blue-800:hover{
-  --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity));
-}
-.hover\:text-white:hover{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-@media (min-width: 640px){
-
-
-  .sm\:bg-gradient-to-tl{
-    background-image: linear-gradient(to top left, var(--tw-gradient-stops));
-  }
+.hover\:opacity-100:hover{
+  opacity: 1;
 }
 @media (min-width: 768px){
 
@@ -1353,8 +921,8 @@ body, html {
   }
 
 
-  .md\:flex-row{
-    flex-direction: row;
+  .md\:cursor-pointer{
+    cursor: pointer;
   }
 
 
@@ -1368,44 +936,12 @@ body, html {
   }
 
 
-  .md\:items-stretch{
-    align-items: stretch;
+  .md\:overflow-x-visible{
+    overflow-x: visible;
   }
 
 
-  .md\:justify-center{
-    justify-content: center;
-  }
-}
-@media (min-width: 1024px){
-
-
-  .lg\:flex-row{
-    flex-direction: row;
-  }
-
-
-  .lg\:items-center{
-    align-items: center;
-  }
-
-
-  .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1rem * var(--tw-space-x-reverse));
-    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-
-  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-y-reverse: 0;
-    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-
-  .lg\:px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
+  .md\:opacity-5{
+    opacity: 0.05;
   }
 }
