--- a/tailwind_theme/tailwind.css
+++ b/tailwind_theme/tailwind.css
@@ -759,112 +759,14 @@ select{
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.container{
-  width: 100%;
-}
-@media (min-width: 640px){
-
-
-  .container{
-    max-width: 640px;
-  }
-}
-@media (min-width: 768px){
-
-
-  .container{
-    max-width: 768px;
-  }
-}
-@media (min-width: 1024px){
-
-
-  .container{
-    max-width: 1024px;
-  }
-}
-@media (min-width: 1280px){
-
-
-  .container{
-    max-width: 1280px;
-  }
-}
-@media (min-width: 1536px){
-
-
-  .container{
-    max-width: 1536px;
-  }
-}
-.absolute{
-  position: absolute;
-}
-.inset-0{
-  inset: 0px;
-}
-.inset-y-0{
-  top: 0px;
-  bottom: 0px;
-}
-.bottom-0{
-  bottom: 0px;
-}
-.bottom-10{
-  bottom: 2.5rem;
-}
-.bottom-5{
-  bottom: 1.25rem;
-}
-.bottom-8{
-  bottom: 2rem;
-}
-.right-0{
-  right: 0px;
-}
-.right-10{
-  right: 2.5rem;
-}
-.right-16{
-  right: 4rem;
-}
-.right-5{
-  right: 1.25rem;
-}
-.right-8{
-  right: 2rem;
-}
-.m-10{
-  margin: 2.5rem;
-}
 .m-2{
   margin: 0.5rem;
 }
 .m-3{
   margin: 0.75rem;
 }
-.m-5{
-  margin: 1.25rem;
-}
-.m-7{
-  margin: 1.75rem;
-}
-.m-8{
-  margin: 2rem;
-}
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
-}
-.my-1{
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
 .mb-3{
   margin-bottom: 0.75rem;
-}
-.mt-10{
-  margin-top: 2.5rem;
 }
 .mt-3{
   margin-top: 0.75rem;
@@ -872,108 +774,23 @@ select{
 .mt-4{
   margin-top: 1rem;
 }
-.block{
-  display: block;
-}
 .flex{
   display: flex;
-}
-.hidden{
-  display: none;
-}
-.h-10{
-  height: 2.5rem;
-}
-.h-5{
-  height: 1.25rem;
-}
-.h-6{
-  height: 1.5rem;
-}
-.h-7{
-  height: 1.75rem;
-}
-.h-8{
-  height: 2rem;
-}
-.h-full{
-  height: 100%;
-}
-.h-screen{
-  height: 100vh;
-}
-.max-h-\[1000px\]{
-  max-height: 1000px;
-}
-.max-h-\[220px\]{
-  max-height: 220px;
-}
-.max-h-\[800px\]{
-  max-height: 800px;
-}
-.max-h-\[80px\]{
-  max-height: 80px;
-}
-.max-h-\[8800px\]{
-  max-height: 8800px;
 }
 .max-h-\[900px\]{
   max-height: 900px;
 }
-.max-h-\[\]{
-  max-height: ;
-}
-.max-h-full{
-  max-height: 100%;
-}
-.max-h-px{
-  max-height: 1px;
-}
-.max-h-screen{
-  max-height: 100vh;
-}
 .min-h-full{
   min-height: 100%;
 }
-.w-10{
-  width: 2.5rem;
-}
-.w-11\/12{
-  width: 91.666667%;
-}
-.w-36{
-  width: 9rem;
-}
-.w-5{
-  width: 1.25rem;
-}
-.w-6{
-  width: 1.5rem;
+.min-h-screen{
+  min-height: 100vh;
 }
 .w-64{
   width: 16rem;
 }
-.w-7{
-  width: 1.75rem;
-}
-.w-8{
-  width: 2rem;
-}
-.w-80{
-  width: 20rem;
-}
-.w-96{
-  width: 24rem;
-}
 .w-full{
   width: 100%;
-}
-.w-max{
-  width: -moz-max-content;
-  width: max-content;
-}
-.w-px{
-  width: 1px;
 }
 .min-w-full{
   min-width: 100%;
@@ -981,17 +798,11 @@ select{
 .max-w-full{
   max-width: 100%;
 }
-.flex-1{
-  flex: 1 1 0%;
-}
-.flex-auto{
-  flex: 1 1 auto;
-}
-.flex-initial{
-  flex: 0 1 auto;
-}
 .flex-grow{
   flex-grow: 1;
+}
+.cursor-pointer{
+  cursor: pointer;
 }
 .flex-row{
   flex-direction: row;
@@ -999,37 +810,17 @@ select{
 .flex-col{
   flex-direction: column;
 }
-.flex-wrap{
-  flex-wrap: wrap;
-}
 .items-center{
   align-items: center;
 }
 .justify-center{
   justify-content: center;
 }
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-.overflow-auto{
-  overflow: auto;
-}
 .overflow-hidden{
   overflow: hidden;
 }
-.overflow-visible{
-  overflow: visible;
-}
 .overflow-x-scroll{
   overflow-x: scroll;
-}
-.overflow-y-scroll{
-  overflow-y: scroll;
-}
-.rounded{
-  border-radius: 0.25rem;
 }
 .rounded-2xl{
   border-radius: 1rem;
@@ -1037,109 +828,23 @@ select{
 .rounded-3xl{
   border-radius: 1.5rem;
 }
-.rounded-full{
-  border-radius: 9999px;
-}
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-.rounded-tl-2xl{
-  border-top-left-radius: 1rem;
-}
-.rounded-tr-2xl{
-  border-top-right-radius: 1rem;
-}
-.rounded-tr-full{
-  border-top-right-radius: 9999px;
-}
-.border-b-2{
-  border-bottom-width: 2px;
-}
-.border-solid{
-  border-style: solid;
-}
-.border-none{
-  border-style: none;
-}
-.border-current{
-  border-color: currentColor;
-}
-.border-gray-900{
-  --tw-border-opacity: 1;
-  border-color: rgb(17 24 39 / var(--tw-border-opacity));
-}
-.bg-current{
-  background-color: currentColor;
-}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-yellow-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 211 77 / var(--tw-bg-opacity));
-}
-.bg-yellow-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 191 36 / var(--tw-bg-opacity));
-}
-.object-contain{
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
 }
-.object-scale-down{
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
-}
 .object-center{
   -o-object-position: center;
      object-position: center;
 }
-.object-left-top{
-  -o-object-position: left top;
-     object-position: left top;
-}
-.p-10{
-  padding: 2.5rem;
-}
-.p-3{
-  padding: 0.75rem;
-}
-.p-5{
-  padding: 1.25rem;
-}
 .p-7{
   padding: 1.75rem;
 }
-.p-9{
-  padding: 2.25rem;
-}
-.px-0{
-  padding-left: 0px;
-  padding-right: 0px;
-}
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-.pl-3{
-  padding-left: 0.75rem;
+.pb-16{
+  padding-bottom: 4rem;
 }
 .pl-5{
   padding-left: 1.25rem;
@@ -1147,23 +852,17 @@ select{
 .pr-10{
   padding-right: 2.5rem;
 }
-.pr-12{
-  padding-right: 3rem;
-}
 .pt-0{
   padding-top: 0px;
 }
 .pt-3{
   padding-top: 0.75rem;
 }
-.pt-7{
-  padding-top: 1.75rem;
+.pt-5{
+  padding-top: 1.25rem;
 }
 .text-left{
   text-align: left;
-}
-.text-center{
-  text-align: center;
 }
 .font-sans{
   font-family: 'Mulish', sans-serif;
@@ -1179,37 +878,24 @@ select{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.font-bold{
-  font-weight: 700;
-}
-.font-light{
-  font-weight: 300;
-}
-.font-medium{
-  font-weight: 500;
-}
 .font-semibold{
   font-weight: 600;
-}
-.uppercase{
-  text-transform: uppercase;
 }
 .italic{
   font-style: italic;
 }
-.text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+.transition{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
-.shadow-2xl{
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.duration-300{
+  transition-duration: 300ms;
 }
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body{
@@ -1219,59 +905,14 @@ body{
 body, html {
     min-height: 100vh;
 }
-.hover\:bg-blue-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-.hover\:text-blue-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-.hover\:text-blue-800:hover{
-  --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity));
-}
-.hover\:text-white:hover{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-@media (min-width: 640px){
-
-
-  .sm\:bg-gradient-to-tl{
-    background-image: linear-gradient(to top left, var(--tw-gradient-stops));
-  }
+.hover\:opacity-100:hover{
+  opacity: 1;
 }
 @media (min-width: 768px){
 
 
-  .md\:fixed{
-    position: fixed;
-  }
-
-
-  .md\:absolute{
-    position: absolute;
-  }
-
-
-  .md\:bottom-0{
-    bottom: 0px;
-  }
-
-
   .md\:flex{
     display: flex;
-  }
-
-
-  .md\:h-10{
-    height: 2.5rem;
-  }
-
-
-  .md\:w-10{
-    width: 2.5rem;
   }
 
 
@@ -1280,8 +921,8 @@ body, html {
   }
 
 
-  .md\:flex-row{
-    flex-direction: row;
+  .md\:cursor-pointer{
+    cursor: pointer;
   }
 
 
@@ -1295,49 +936,12 @@ body, html {
   }
 
 
-  .md\:items-stretch{
-    align-items: stretch;
+  .md\:overflow-x-visible{
+    overflow-x: visible;
   }
 
 
-  .md\:justify-center{
-    justify-content: center;
-  }
-
-
-  .md\:overflow-x-scroll{
-    overflow-x: scroll;
-  }
-}
-@media (min-width: 1024px){
-
-
-  .lg\:flex-row{
-    flex-direction: row;
-  }
-
-
-  .lg\:items-center{
-    align-items: center;
-  }
-
-
-  .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1rem * var(--tw-space-x-reverse));
-    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-
-  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-y-reverse: 0;
-    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-
-  .lg\:px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
+  .md\:opacity-5{
+    opacity: 0.05;
   }
 }
