Updates to content

--- a/src/views/abbot.html
+++ b/src/views/abbot.html
@@ -6,22 +6,68 @@
 <div class="p-7 md:max-w-2xl">
     <h2 class="font-semibold font-serif text-2xl">法曜法師 Ven. Dr. Dhammadipa Sak, Ph.D.</h2>
     <img src="../images/c71134_26e2be0351ad44688b3bac3ec8fca12b.jpg" class="mt-3 rounded-2xl">
-    <p class="pt-3">
-        法曜博士目前擔任馬里蘭州美國禪學院醍醐寺的住持兼主席，同時也是麻薩諸塞州般若寺的住持。他曾在紐約莊嚴寺擔任住持（2008-2015），並兼任紐約大覺寺方丈（2012-2017）。目前，法曜博士擔任美國>佛教協會的副會長。他於2020年在台灣創立中華習禪會，致力於推廣各類禪修與佛教教理。
+    <p class="pt-3 text-sm">
+        Bhikkhu. Dr. Dhammadipa Sak, recognized in Chinese as 法曜 (Fa Yao), holds esteemed positions as the Abbot and
+        President of the Amata Meditation Center and US Zen Institute located in Boyds and Germantown, Maryland,
+        respectively. He also presides as Abbot at the Wisdom Temple in Billerica, Massachusetts. His illustrious
+        journey includes roles as Abbot and resident monk at the Chuang Yen Monastery in Carmel, NY (2008-2015),
+        followed by service at the Temple of Enlightenment in Bronx, NY until 2017. Currently, he assumes the role of
+        Vice President for the Buddhist Association of the United States. A notable accomplishment during his tenure in
+        Taiwan (2020-2022) was the establishment of the Association of Sino Jhāyin, a body responsible for organizing an
+        array of meditation retreats in Taiwan.
     </p>
-    <p class="pt-3">
-        作為一位學者和禪修導師，法曜博士深入研究早期大乘佛教和上座部佛教。他的學術焦點包括說一切有部阿毗達摩和上座部阿毗達摩，以及在瑜伽行派體系中定禪與內觀的融合，尤其是瑜伽師地論和天臺理論>。除了學術研究，法曜博士經常在世界各地指導長期或短期的各類禪修。
+    <p class="pt-3 text-sm">
+        An academic and meditation maestro, Ven. Dr. Dhammadipa Sak possesses an in-depth knowledge of early Mahāyāna
+        and Theravāda Buddhism. His primary academic interests lie in Sarvāstivāda Abhidharma and Theravāda Abhidhamma.
+        Additionally, he delves deep into the Yogacāra system, especially Yogācārabhūmi, and Tientai, emphasizing the
+        confluence of Śamatha and Vipraśyana in meditation theory. Outside the realm of academia, he leads meditation
+        retreats of varied durations globally.
     </p>
-    <p class="pt-3">
-        法曜博士於1987年在斯里蘭卡受具足戒，開啟了他的學術之旅。他獲得巴利和佛學大學的佛學和西方哲學學士學位，隨後在凱蘭尼亞大學獲得佛教哲學碩士學位。在台灣的圓光佛學研究所和福嚴佛學院任教後>，他前往英國深造六年，最終在布里斯托大學宗教系獲得神學與宗教系哲學博士學位。
+    <p class="pt-3 text-sm">
+        Ven. Dhammadipa embarked on his academic voyage with his monastic ordination in Sri Lanka in 1987. Subsequently,
+        he earned a Bachelor's degree in Buddhist Studies and Western Philosophy from the Pali and Buddhist University.
+        This was succeeded by a Master's in Buddhist Philosophy from the University of Kelaniya. Over the years, he has
+        lectured at prestigious institutions, including the Yuan Kuang Institute of Buddhist Studies and the Fuyen
+        Buddhist Institute in Taiwan. After dedicating six years to rigorous research in the UK, he achieved a Ph.D.
+        from the
+        Department of Religions at the University of Bristol."
     </p>
-    <p class="pt-3">
-        自2008年以來，法曜博士一直是中國廣州中山大學的特聘研究員。2019年，他在芝加哥大學擔任訪問講師，開設多門課程，包括&ldquo;佛教思想基礎&rdquo;、&ldquo;巴利文和中文佛教經典的比較閱讀&rdquo;、&ldquo;佛教學術體系及其實踐結構&rdquo;和&ldquo;走向普世佛教&rdquo;。
+    <p class="pt-3 text-sm">
+        Since 2008, Dr. Dhammadipa has been affiliated with Sun Yat-sen University, Guangzhou, China, as a distinguished
+        research fellow. In 2019, he undertook a visiting lectureship at the University of Chicago, offering courses on
+        various subjects, including 'The Foundation of Buddhist Thoughts', 'Comparative Reading of Pali and Chinese
+        Buddhist Texts', 'Buddhist Scholasticism and Its Practice Structures' and 'Towards Ecumenical Buddhism'.
     </p>
-    <p class="pt-3">儘管行程繁忙，法曜博士最近將注意力轉向醍醐寺禪修中心，推廣諸如四梵住、安般念住，以及四念住的禪修實踐。</p>
-    <p class="pt-3">他目前的研究涵蓋了對不同經典中四念處的詳細探討，以及對佛陀生平的深入分析，並以巴利文、梵文和中文經典為基礎進行研究。</p>
-    <p class="pt-3">
-        作為一位語言方面的專家，法曜博士展現了卓越的多語閱讀能力，包括巴利文、梵文、英文、中文、法文和日文。他的學術興趣超越佛教，還包括西方哲學、基督教、伊斯蘭教和印度教。目前，他以世界宗教議會董事的身份，積極倡導全球>宗教團結和推動普世佛教。
+    <p class="pt-3 text-sm">
+        Despite a hectic schedule, he has recently shifted his focus more to the Meditation Center Amata, promulgating
+        meditation techniques like Brahmavihāra bhavanā, Ānāpānasati/smṛti with regards to satipaṭṭhāna/Śmṛti-upasthāna,
+        and Satipaṭṭhāna meditation methods.
     </p>
+    <p class="pt-3 text-sm">
+        His current research encompasses a detailed exploration of Satipaṭṭhāna across different canonical sources in
+        and an exhaustive analysis of Buddha's life, grounding his studies in Pali, Sanskrit, and Chinese canons.
+    </p>
+    <p class="pt-3 text-sm">
+        Prowess with a remarkable aptitude for languages, Ven. Dhammadipa demonstrates proficiency in reading a diverse
+        set of languages such as Pāli, Sanskrit, English, Chinese, French, and Japanese. His scholarly interests span
+        well beyond the boundaries of Buddhism, encompassing Western Philosophy, Christianity, Islam, and Hinduism.
+        Currently, he holds a distinguished position on the Board of Trustees of the Parliament of World's Religions,
+        fervently advocating for global religious unity and the promotion of ecumenical Buddhism.
+    </p>
+    <h2 class="pt-3 font-semibold font-serif">Select Publications</h2>
+    <ul class="pt-3 list-disc text-sm">
+        <li>《中國六朝時期的廣州為海運線上菁英型佛教所扮演發展中的角色》 (A Study on Guangzhou and its Role in Elite Buddhism during the Maritime Era
+            of the Sixth Dynasty). Yuan Kuang Journal of Buddhist Studies No. 37, June 2021.</li>
+        <li><i>"Guangzhou and its Role in Elite Buddhism during the Maritime Routes of the Six Dynasties."</i> In Maritime
+            Buddhist Transmissions, edited by Long, Xiu & Jiang, Hong, Religion Culture Publishing House, April 2016.
+        </li>
+        <li><i>"The Great Compassion and Fraternity in Mahayana Buddhist Traditions."</i> In Proceedings of the
+            Buddhist-Catholic Dialogue on Suffering, Liberation, and Fraternity, Claritas: Journal of Dialogue and
+            Culture, vol. 4, no. 2, 2015.</li>
+        <li><i>"How to Practice Four Establishment of Mindfulness."</i> Translated by Dhammadipa Sak from the original by Shih
+            Mom. Carmel: BAUS, 2010.</li>
+        <li><i>"The Divisions of anapanasati/smati in their Chronological Development."</i> In Buddhist and Pali Studies in
+            Honour of the Venerable Professor Kakkapaliye Anuruddha, The University of Hong Kong, Feb. 2009</li>
+    </ul>
 </div>
 {% endblock %}
