--- a/src/views/mission.html
+++ b/src/views/mission.html
@@ -5,11 +5,26 @@
 {% block content %}
 <div class="p-7 md:max-w-2xl">
     <h2 class="font-semibold font-serif text-2xl">宗旨 Our Mission</h2>
-    <p class="font-sans mt-3">踐行「眾生和天人長遠安穏與利益」的宗旨，修習止、觀及其教理，陶冶人類的善行。 致力於調柔佛教宗派，弘揚跨越宗教、文化與國界的禪法，敞開雙臂歡迎各方的有志者前來參學。</p>
-    <p class="mt-3">Putting into practice our mission statement of &ldquo;for the long-term peace and benefits of all
-        beings, devas, and humans.&ldquo; By practicing samatha and vipassana and learning their principles, we will be
-        able to cultivate the goodness in mankind. We strive to foster harmony among different Buddhist lineages,
-        promote a meditation method that crosses the boundary of religion, culture, and national border. We open our
-        arms to welcome all with aspiration to come to learn together.</p>
+    <p class="mt-3 text-sm">The choice of the name "Amata" for our meditation center, officially known as the Amata Meditation
+        Center (AMC), is deeply rooted in the core principles and aspirations of our center. The name "Amata" holds
+        profound significance in the context of Buddhist ideals, reflecting our dedication to the study and practice of
+        higher virtues, higher mind, and higher wisdom as advocated by the Buddha.</p>
+    <p class="mt-3 text-sm">The term "Amata" is derived from the Pali language and directly translates to "deathless." This
+        concept is intricately connected to the ultimate goal of Buddhist practitioners – the attainment of Nibbāna, a
+        state beyond birth, decay, and death. The renowned Indian Buddhist monk, commentator, and philosopher
+        Buddhaghosa, who lived in the 5th century, eloquently articulated this aspiration with the phrase <i>"na jāyati na
+        jīyati na mīyati ti amatan ti vuccati"</i> - meaning, "Not to be reborn, not to decay, not to die is said to be
+        Amata."</p>
+    <p class="mt-3 text-sm">By choosing the name "Amata" for our center, we emphasize the essence of our commitment to guiding
+        individuals towards the pursuit of the deathless state, Nibbāna. This encapsulates the core philosophy of our
+        meditation center and underscores the transformative journey that practitioners undertake within our community.
+    </p>
+    <p class="mt-3 text-sm">At the heart of all AMC activities lies the dual emphasis on meditative practice, specifically
+        samatha-vipassanā, and theoretical learning of the Buddha's teachings. We embrace a non-sectarian approach,
+        fostering an inclusive environment where individuals from various backgrounds can engage in the profound
+        exploration of Buddhist wisdom and the cultivation of a tranquil mind.</p>
+    <p class="mt-3 text-sm">In essence, "Amata" serves not just as a name but as a symbolic representation of our meditation
+        center's commitment to guiding individuals on a path towards the timeless and liberating essence of Nibbāna,
+        embodying the teachings of the Buddha in a manner that transcends sectarian boundaries.</p>
 </div>
 {% endblock %}
