Rename menu items and title of 'about' page

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -1,10 +1,10 @@
 {% extends "src/views/layout.html" %}
 
-{% set title="Amata: Mission" %}
+{% set title="About Amata" %}
 
 {% block content %}
 <div class="p-7 md:max-w-2xl">
-    <h2 class="font-semibold font-serif text-2xl">宗旨 Our Mission</h2>
+    <h2 class="font-semibold font-serif text-2xl">About Amata</h2>
     <p class="mt-3 text-sm">The choice of the name "Amata" for our meditation center, officially known as the Amata Meditation
         Center (AMC), is deeply rooted in the core principles and aspirations of our center. The name "Amata" holds
         profound significance in the context of Buddhist ideals, reflecting our dedication to the study and practice of
