--- a/src/views/dhammadipa.html
+++ b/src/views/dhammadipa.html
@@ -1,6 +1,6 @@
 {% extends "src/views/layout.html" %}
 
-{% set title="Amata: Abbot" %}
+{% set title="Master Dhammadipa" %}
 
 {% block content %}
 <div class="p-7 md:max-w-2xl">
