--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -16,9 +16,9 @@
             </div>
         </div>
         <nav class="flex mt-4 flow-row justify-items-center justify-between">
-            <a href="mission.html" class="text-blue-500 hover:text-blue-800 mx-2">Mission</a>
+            <a href="about.html" class="text-blue-500 hover:text-blue-800 mx-2">About</a>
             <span>|</span>
-            <a href="abbot.html" class="text-blue-500 hover:text-blue-800 mx-2">The Abbot</a>
+            <a href="dhammadipa.html" class="text-blue-500 hover:text-blue-800 mx-2">Master Dhammadipa</a>
         </nav>
 
         <!-- block for specific page content -->
