--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-light">
 
 <head>
     <meta charset="utf-8">
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../sass/index.scss">
 </head>
 
-<body class="bg-white md:flex md:flex-col md:items-center" style="overflow-x: hidden">
-    <div class="flex flex-col items-center max-h-[900px] max-h-screen min-h-screen md:max-w-2xl">
+<body class="bg-light md:flex md:flex-col md:items-center text-dark" style="overflow-x: hidden">
+    <div class="flex flex-col items-center max-h-[900px] max-h-screen min-h-screen md:max-w-xl">
         <div class="flex mt-4" data-pgc-define="logo">
             <div class="flex items-center justify-center w-full">
                 <a href="index.html"><img src="../images/Screenshot 2024-01-08 094916.png" class="text-left w-64"></a>
