--- a/src/views/dhammadipa.html
+++ b/src/views/dhammadipa.html
@@ -3,7 +3,7 @@
 {% set title="Master Dhammadipa" %}
 
 {% block content %}
-<div class="p-7 md:max-w-2xl">
+<div class="p-7 md:max-w-2xl bg-light">
     <h2 class="font-semibold font-serif text-2xl">法曜法師 Ven. Dr. Dhammadipa Sak, Ph.D.</h2>
     <img src="../images/c71134_26e2be0351ad44688b3bac3ec8fca12b.jpg" class="mt-3 rounded-2xl">
     <p class="pt-3 text-sm">
