Try different unicode arrows

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,8 +7,8 @@
     <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl mx-5">
         <div class="relative h-full w-full">
             <div class="absolute flex justify-between transform left-5 right-5 pb-5 bottom-0">
-                <a id="prev-link-{{ index }}" href="#slide{{ index - 1 }}" class="btn btn-circle bg-light hover:bg-light border-0 shadow-xl text-dark text-lg">🡐</a>
-                <a id="next-link-{{ index }}" href="#slide{{ index + 1 }}" class="btn btn-circle bg-light hover:bg-light border-0 shadow-xl text-dark text-lg">🡒</a>
+                <a id="prev-link-{{ index }}" href="#slide{{ index - 1 }}" class="btn btn-circle bg-light hover:bg-light border-0 shadow-xl text-dark text-lg">🡠</a>
+                <a id="next-link-{{ index }}" href="#slide{{ index + 1 }}" class="btn btn-circle bg-light hover:bg-light border-0 shadow-xl text-dark text-lg">🡢</a>
             </div>
             <img class="aspect-auto min-h-full object-center object-cover" src="{{ imageLink }}">
         </div>
