Use SVG arrows to address rendering issue on Android

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,8 +7,17 @@
     <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl mx-5">
         <div class="relative h-full w-full">
             <div class="absolute flex justify-between transform left-5 right-5 pb-5 bottom-0">
-                <a id="prev-link-{{ index }}" href="#slide{{ index - 1 }}" class="btn btn-circle bg-light hover:bg-light border-0 shadow-xl text-dark text-lg">🡐</a>
-                <a id="next-link-{{ index }}" href="#slide{{ index + 1 }}" class="btn btn-circle bg-light hover:bg-light border-0 shadow-xl text-dark text-lg">🡒</a>
+                <a id="prev-link-{{ index }}" href="#slide{{ index - 1 }}" class="btn btn-circle bg-light hover:bg-light border-0 shadow-xl text-dark text-lg">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
+                    </svg>
+                </a>
+                <a id="next-link-{{ index }}" href="#slide{{ index + 1 }}"
+                    class="btn btn-circle bg-light hover:bg-light border-0 shadow-xl text-dark text-lg">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8" />
+                    </svg>
+                </a>
             </div>
             <img class="aspect-auto min-h-full object-center object-cover" src="{{ imageLink }}">
         </div>
