--- a/src/views/index.html
+++ b/src/views/index.html
@@ -42,7 +42,7 @@
         carouselItem(3, '../images/ed3fca_bff95a3760314a24a0dce6b75f44a29e~mv2_d_4730_2660_s_4_2.jpg', 'https://en.mkmeditationc.com', '神山禪修中心', 'Mount Kinabalu Meditation Centre', 'Kundasang, Sabah', 'Malaysia')
     }}
     {{
-        carouselItem(4, '../images/20230211_p_20.jpg', 'https://asj.org.tw', '中華習禪會', 'The Association of Sino Jhāyin', 'Zhongpu, Chiayi', 'Taiwan')
+        carouselItem(4, '../images/20230211_p_20.jpg', 'https://www.asj.org.tw', '中華習禪會', 'The Association of Sino Jhāyin', 'Zhongpu, Chiayi', 'Taiwan')
     }}
     {{
         carouselItem(5, '../images/TB202312311558.jpg', 'http://noble-silence.org', '聖默禪院', 'Sheng Mo Temple Meditation Center', 'Gukeng, Yunling', 'Taiwan')
